# abtools

./: .gitignore  LICENSE  Untitled.ipynb  check_interactive.ipynb  pyproject.toml  setup.py
.spyproject/: workspace.ini
abtoaster/: __init__.py  old.py  utils.py
abtoaster/bayesian/: utils.py
abtoaster/bayesian/conjurate/: base.py  distributions.py
abtoaster/bootstrap/: ab.py  bootstrap.py  funcs.py  plot.py
abtoaster/frequentist/: abtest.py  base.py
abtoaster/pipeline/: data.py  health_checks.py  metrics.py
abtoaster/preprocessing/: outliers.py  variance.py
abtools/: __init__.py  abmodels.py  models.py  plotting.py  special.py  utils.py
abtools/bayesian/: __init__.py  abmodels.py  base.py  models.py  special.py
abtools/bayesian/conjurate/: distributions.py
abtools/bootstrap/: __init__.py  ab.py  bootstrap.py
abtools/core/: abtest.py  base.py  bayesian_abtest_pymc3.py  distributions.py  model_selection.py  models.py  pymc3_models.py
abtools/frequentist/: __init__.py  base.py  tests.py  utils.py  ztest.py
abtools/tests/: test_bayesian.py
examples/: 01_bayesian_conversion_test.ipynb  01_conversion_test.ipynb  02_bayesian_arppu_test.ipynb  03_bayesian_arpu_test.ipynb  04-frequantist tests.ipynb  Untitled.ipynb  bayesian_conversion_test.ipynb  data.csv  results.csv  results_wald.csv
tests/: test_abtoaster.py
