[tool.poetry]
name = "abtoaster"
version = "0.0.1"
description = ""
authors = ["Ivan Bagaev <ivan.bagaev1993@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
numpy = "^1.18.1"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
